--- a/src/Club/MediaBundle/Resources/views/Document/header.html.twig
+++ b/src/Club/MediaBundle/Resources/views/Document/header.html.twig
@@ -1,6 +1,6 @@
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('admin_media_document') }}">{% trans %}Media files{% endtrans %}</a></li>
             <li><a href="{{ path('admin_media_document_new') }}">{% trans %}Upload document{% endtrans %}</a></li>
         </ul>
