--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/editChoice.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/editChoice.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubTeamBundle:AdminSchedule:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 
 <h2>Edit recurring team</h2>
