--- a/src/Club/BookingBundle/Resources/views/AdminField/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminField/index.html.twig
@@ -1,17 +1,10 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_booking_adminfield_new') }}">{% trans %}Create field{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubBookingBundle:AdminField:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
-
 <table class="table">
   <thead>
     <tr>
