--- a/src/Club/BookingBundle/Resources/views/AdminField/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminField/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubBookingBundle:AdminField:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_adminfield_new')} %}
 {% endblock %}
