--- a/src/Club/BookingBundle/Resources/views/AdminPlanException/edit.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlanException/edit.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubBookingBundle:AdminPlanException:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_adminplanexception_edit', {'id':exception.id})} %}
 {% endblock %}
