--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -1,9 +1,9 @@
 {% extends "ClubMessageBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('club_message_adminmessage_recipientuser', {'id':message.id}) }}">{% trans %}Add user{% endtrans %}</a></li>
             <li><a href="{{ path('club_message_adminmessage_recipientgroup', {'id':message.id}) }}">{% trans %}Add group{% endtrans %}</a></li>
             <li><a href="{{ path('club_message_adminmessage_recipientevent', {'id':message.id}) }}">{% trans %}Add event{% endtrans %}</a></li>
