--- a/src/Club/MessageBundle/Resources/views/AdminMessage/show.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/show.html.twig
@@ -1,15 +1,7 @@
 {% extends "ClubMessageBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_message_adminmessage_index') }}">{% trans %}Messages{% endtrans %}</a></li>
-            <li><a href="{{ path('club_message_adminmessage_show', {'id':message.id}) }}">{% trans %}Show{% endtrans %}</a></li>
-            <li><a href="{{ path('club_message_adminmessage_recipients', {'id':message.id}) }}">{% trans %}Recipients{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubMessageBundle:AdminMessage:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
