--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/new.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubTeamBundle:AdminSchedule:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_team_adminschedule_new', {'category_id':category.id})} %}
 {% endblock %}
