--- a/src/Club/TeamBundle/Resources/views/AdminTeamCategory/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminTeamCategory/index.html.twig
@@ -1,13 +1,7 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_team_adminteamcategory_new') }}">{% trans %}Create category{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubTeamBundle:AdminTeamCategory:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
