--- a/src/Club/UserBundle/Resources/views/AdminLocation/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/edit.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubUserBundle:AdminLocation:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_location_edit', {'id':location.id})} %}
 {% endblock %}
