--- a/src/Club/UserBundle/Resources/views/User/header.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/header.html.twig
@@ -1,9 +1,8 @@
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('user') }}">{% trans %}Edit{% endtrans %}</a></li>
             <li><a href="{{ path('club_user_usersetting_index') }}">{% trans %}Settings{% endtrans %}</a></li>
-            <li><a href="{{ path('shop_subscription') }}">{% trans %}Subscriptions{% endtrans %}</a></li>
             <li><a href="{{ path('club_user_user_ical', {'hash':app.user.apiHash}) }}">{% trans %}iCal{% endtrans %}</a></li>
         </ul>
     </div>
