--- a/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubEventBundle:AdminEvent:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubEventBundle:AdminEvent:form.html.twig" with {'path':path('club_event_adminevent_new'), 'novalidate':true}  %}
 {% endblock %}
