--- a/src/Club/NewsBundle/Resources/views/AdminAnnouncement/new.html.twig
+++ b/src/Club/NewsBundle/Resources/views/AdminAnnouncement/new.html.twig
@@ -1,7 +1,9 @@
 {% extends "ClubNewsBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubNewsBundle:AdminAnnouncement:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
-
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_news_adminannouncement_new')} %}
-
 {% endblock %}
