--- a/src/Club/NewsBundle/Resources/views/base.html.twig
+++ b/src/Club/NewsBundle/Resources/views/base.html.twig
@@ -1,3 +1,7 @@
 {% extends "ClubLayoutBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/newspaper.png') }}" /> {% trans %}News{% endtrans %}</h1></div>{% endblock %}
+{% block header %}
+<div class="page-header">
+    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/newspaper.png') }}" /> {% trans %}News{% endtrans %}</h1>
+</div>
+{% endblock %}
