--- a/src/Club/PasskeyBundle/Resources/views/AdminPasskey/edit.html.twig
+++ b/src/Club/PasskeyBundle/Resources/views/AdminPasskey/edit.html.twig
@@ -1,7 +1,10 @@
 {% extends "ClubPasskeyBundle::base.html.twig" %}
 
-{% block body %}
+{% block pagenav %}
+{% include "ClubPasskeyBundle:AdminPasskey:header.html.twig" %}
+{% endblock %}
 
+{% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_passkey_adminpasskey_edit', {'id':passkey.id})} %}
 
 {% if not passkey.user %}
