--- a/src/Club/PasskeyBundle/Resources/views/AdminPasskey/new.html.twig
+++ b/src/Club/PasskeyBundle/Resources/views/AdminPasskey/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubPasskeyBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubPasskeyBundle:AdminPasskey:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_passkey_adminpasskey_new')} %}
 {% endblock %}
