--- a/src/Club/BookingBundle/Resources/views/AdminPlan/header.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/header.html.twig
@@ -1,8 +1,12 @@
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
+            <li><a href="{{ path('club_booking_adminplan_new') }}">{% trans %}Create plan{% endtrans %}</a></li>
+
+            {% if plan is defined %}
             <li><a href="{{ path('club_booking_adminplan_edit', {'id':plan.id}) }}">{% trans %}Edit{% endtrans %}</a></li>
             <li><a href="{{ path('club_booking_adminplanexception_index', {'id':plan.id}) }}">{% trans %}Exceptions{% endtrans %}</a></li>
+            {% endif %}
         </ul>
     </div>
 </div>
