--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -1,13 +1,7 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_booking_adminplan_new') }}">{% trans %}Create plan{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubBookingBundle:AdminPlan:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
