--- a/src/Club/EventBundle/Resources/views/AdminEvent/header.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/header.html.twig
@@ -1,10 +1,13 @@
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
+            <li><a href="{{ path('club_event_adminevent_new') }}">{% trans %}Create event{% endtrans %}</a></li>
+            {% if event is defined %}
             <li><a href="{{ path('admin_event_event_edit', { 'id':event.id }) }}">{% trans %}Event{% endtrans %}</a></li>
             <li><a href="{{ path('admin_event_attend', { 'id':event.id }) }}">{% trans %}Attends{% endtrans %}</a></li>
             <li><a target="_open" href="{{ path('club_event_adminattend_print', { 'id':event.id }) }}">{% trans %}Print{% endtrans %}</a></li>
+            {% endif %}
         </ul>
     </div>
 </div>
