--- a/src/Club/MatchBundle/Resources/views/Match/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/show.html.twig
@@ -6,9 +6,9 @@ Match: {{ match.teamOne.team.teamName }} - {{ match.teamTwo.team.teamName }}
 
 {% block pagenav %}
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('club_match_matchcomment_new', { 'match_id':match.id }) }}">{% trans %}Add comment{% endtrans %}</a></li>
             {% if match.isOwner(app.user) %}
             <li><a href="{{ path('club_match_match_delete', { 'id':match.id }) }}" onclick="return confirm('{% trans %}Are you sure?{% endtrans %}')">{% trans %}Delete match{% endtrans %}</a></li>
