--- a/src/Club/RankingBundle/Resources/views/AdminRanking/users.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRanking/users.html.twig
@@ -1,13 +1,7 @@
 {% extends "ClubRankingBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_ranking_adminranking_index') }}">{% trans %}Back to ranking{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubRankingBundle:AdminRanking:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
