--- a/src/Club/RankingBundle/Resources/views/AdminRule/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRule/index.html.twig
@@ -1,13 +1,7 @@
 {% extends "ClubRankingBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_ranking_adminrule_new') }}">{% trans %}Create rule{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubRankingBundle:AdminRule:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
