--- a/src/Club/RankingBundle/Resources/views/AdminRule/new.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRule/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubRankingBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubRankingBundle:AdminRule:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_ranking_adminrule_new')} %}
 {% endblock %}
