--- a/src/Club/RankingBundle/Resources/views/Ranking/match_button.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/match_button.html.twig
@@ -1,9 +1,9 @@
 {% if is_granted('IS_AUTHENTICATED_FULLY') and ranking.isOpen %}
 
 {% if (ranking.inviteOnly and ranking.canPlay(app.user)) or not ranking.inviteOnly %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('club_ranking_match_new', {'ranking_id':ranking.id}) }}">{% trans %}Insert match{% endtrans %}</a></li>
         </ul>
     </div>
