--- a/src/Club/ShopBundle/Resources/views/AdminCategory/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/edit.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubShopBundle:AdminCategory:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_shop_category_edit', {'id':category.id})} %}
 {% endblock %}
