--- a/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
@@ -1,13 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('admin_shop_category_new') }}">{% trans %}Create category{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubShopBundle:AdminCategory:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
