--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubShopBundle:AdminCoupon:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_shop_admincoupon_new')} %}
 {% endblock %}
