--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -8,9 +8,9 @@
 
 {% block pagenav %}
 {% if not order.paid and not order.cancelled %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('club_shop_adminorder_productedit', {'id':order.id}) }}">{% trans %}Edit products{% endtrans %}</a></li>
         </ul>
     </div>
