--- a/src/Club/ShopBundle/Resources/views/AdminProduct/archive.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/archive.html.twig
@@ -1,14 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('admin_shop_product_new') }}">{% trans %}Create product{% endtrans %}</a></li>
-            <li><a href="{{ path('admin_shop_product_archive') }}">{% trans %}Archive{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubShopBundle:AdminProduct:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
