--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -1,9 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path("shop_product_cart",{"id":product.id}) }}">{% trans %}Put in cart{% endtrans %}</a></li>
         </ul>
     </div>
