--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/edit.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/edit.html.twig
@@ -1,7 +1,10 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
-{% block body %}
+{% block pagenav %}
+{% include "ClubWelcomeBundle:AdminBlog:header.html.twig" %}
+{% endblock %}
 
+{% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_welcome_adminblog_edit', {'id':blog.id}), 'novalidate':true} %}
 
 {% endblock %}
