--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
@@ -1,13 +1,7 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_welcome_adminblog_new') }}">{% trans %}Create post{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubWelcomeBundle:AdminBlog:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
