--- a/src/Club/WelcomeBundle/Resources/views/Blog/header.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/header.html.twig
@@ -1,8 +1,8 @@
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
             <li><a href="{{ path('club_welcome_blog_show', {'blog_id':blog.id}) }}">{% trans %}Blog{% endtrans %}</a></li>
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             <li><a href="{{ path('club_welcome_blog_comment', {'blog_id':blog.id}) }}">{% trans %}Comment{% endtrans %}</a></li>
             {% endif %}
             {% if blog.user == app.user %}
