--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -1,15 +1,7 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
 {% block pagenav %}
-{% if is_granted('IS_AUTHENTICATED_FULLY') and enable_blog %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_welcome_blog_new') }}">{% trans %}Post blog{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
-{% endif %}
+{% include "ClubWelcomeBundle:Welcome:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
