Rewrite FULLY with REMEMBERED.

--- a/src/Club/BookingBundle/Resources/views/Booking/attend_team.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/attend_team.html.twig
@@ -1,4 +1,4 @@
-{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
 <fieldset>
     <legend>{% trans %}Attend{% endtrans %}</legend>
 
