--- a/src/Club/MatchBundle/Resources/views/Match/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
 <div class="navbar navbar-default">
     <div class="container-fluid">
         <ul class="nav navbar-nav">
