--- a/src/Club/TeamBundle/Resources/views/Team/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Team/index.html.twig
@@ -34,7 +34,7 @@
       <td>{{ schedule.firstDate|date('H:i') }} - {{ schedule.endDate|date('H:i') }}</td>
       <td>{{ schedule.teamCategory.teamName }} ( {{ schedule.users|length }}/{{ schedule.maxAttend }} )</td>
       <td>{{ schedule.location.locationName }}</td>
-      {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+      {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
       <td>
         {% if user.attend(schedule) %}
           {% include "ClubLayoutBundle:Default:unattend_link.html.twig" with {'url':path('club_team_team_unattend', { 'id':schedule.id })} %}
