Rewrote all page-headers.

--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubInstallerBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header"><h1>ClubMaster Installation <small>Finish!</small></h1></div>
+<h1 class="page-header">ClubMaster Installation <small>Finish!</small></h1>
 {% endblock %}
 
 {% block pagenav %}
