--- a/src/Club/MatchBundle/Resources/views/Match/new.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/new.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubMatchBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{% trans %}Match Result{% endtrans %}</h1></div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{% trans %}Match Result{% endtrans %}</h1>
+{% endblock %}
 
 {% block body %}
 <p>{% trans %}This match is just to keep track of your wins and losses, it will not end up on any ranking list.{% endtrans %}</p>
