--- a/src/Club/RankingBundle/Resources/views/base.html.twig
+++ b/src/Club/RankingBundle/Resources/views/base.html.twig
@@ -1,7 +1,5 @@
 {% extends "ClubLayoutBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header">
-    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/medal_gold_1.png') }}" /> {% trans %}Ranking{% endtrans %}</h1>
-</div>
+<h1 class="page-header"><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/medal_gold_1.png') }}" /> {% trans %}Ranking{% endtrans %}</h1>
 {% endblock %}
