--- a/src/Club/ShopBundle/Resources/views/AdminOrder/productEdit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/productEdit.html.twig
@@ -1,9 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block header %}
-    <div class="page-header">
-        <h1>{% trans with {'%number%':order.orderNumber} %}Order #%number%{% endtrans %}</h1>
-    </div>
+<h1 class="page-header">{% trans with {'%number%':order.orderNumber} %}Order #%number%{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
