--- a/src/Club/ShopBundle/Resources/views/AdminOrder/user.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/user.html.twig
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block header %}
-<div class="page-header">
-    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Orders{% endtrans %}</h1>
-</div>
+<h1 class="page-header"><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Orders{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
