--- a/src/Club/UserBundle/Resources/views/AdminUserImport/errors.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUserImport/errors.html.twig
@@ -1,8 +1,8 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header">
-<h1>{% trans %}Errors occur{% endtrans %}</h1>
-</div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{% trans %}Errors occur{% endtrans %}</h1>
+{% endblock %}
 
 {% block body %}
 <p>{% trans %}No imports has been made, because some error has occur. Correct the errors and try again.{% endtrans %}
