--- a/src/Club/UserBundle/Resources/views/Location/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/index.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{% trans %}Location{% endtrans %}</h1></div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{% trans %}Location{% endtrans %}</h1>
+{% endblock %}
 
 {% block body %}
 <p>{% trans %}If you want to change your current location, just click on the location you want to go to.{% endtrans %}</p>
