--- a/src/Club/UserBundle/Resources/views/LoginLog/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/LoginLog/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header"><h1>{% trans %}Login Log{% endtrans %}</h1></div>
+<h1 class="page-header">{% trans %}Login Log{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
