--- a/src/Club/WelcomeBundle/Resources/views/Blog/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block header %}
-<div class="page-header"><h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" /> {% trans %}Blog{% endtrans %}</h1></div>
+<h1 class="page-header"><img src="{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" /> {% trans %}Blog{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
