--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{% trans with {'%name%':event.eventName} %}%name%, Attends{% endtrans %}</h1></div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{% trans with {'%name%':event.eventName} %}%name%, Attends{% endtrans %}</h1>
+{% endblock %}
 
 {% block body %}
 {% include "ClubEventBundle:AdminEvent:header.html.twig" %}
