--- a/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{{ event.eventName }}</h1></div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{{ event.eventName }}</h1>
+{% endblock %}
 
 {% block body %}
 
