--- a/src/Club/FeedbackBundle/Resources/views/base.html.twig
+++ b/src/Club/FeedbackBundle/Resources/views/base.html.twig
@@ -1,7 +1,5 @@
 {% extends "ClubLayoutBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header">
-    <h1>{% trans %}Feedback{% endtrans %}</h1>
-</div>
+<h1 class="page-header">{% trans %}Feedback{% endtrans %}</h1>
 {% endblock %}
