--- a/src/Club/NewsBundle/Resources/views/base.html.twig
+++ b/src/Club/NewsBundle/Resources/views/base.html.twig
@@ -1,7 +1,5 @@
 {% extends "ClubLayoutBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header">
-    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/newspaper.png') }}" /> {% trans %}News{% endtrans %}</h1>
-</div>
+<h1 class="page-header"><img src="{{ asset('bundles/clublayout/images/icons/32x32/newspaper.png') }}" /> {% trans %}News{% endtrans %}</h1>
 {% endblock %}
