--- a/src/Club/RankingBundle/Resources/views/Match/new.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Match/new.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubRankingBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{% trans with {'%name%':ranking.name} %}Ranking, %name%{% endtrans %}</h1></div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{% trans with {'%name%':ranking.name} %}Ranking, %name%{% endtrans %}</h1>
+{% endblock %}
 
 {% block body %}
 <p>{% trans %}When you have played in this ranking, insert the match result in order to update the ranking list.{% endtrans %}</p>
