--- a/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubRankingBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{% trans with {'%name%':ranking.name} %}Ranking, %name%{% endtrans %}</h1></div>{% endblock %}
+{% block header %}
+<h1 class="page-header">{% trans with {'%name%':ranking.name} %}Ranking, %name%{% endtrans %}</h1>
+{% endblock %}
 
 {% block body %}
 {% include "ClubRankingBundle:Ranking:match_button.html.twig" %}
