--- a/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
@@ -1,9 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header">
-    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Checkout{% endtrans %}</h1>
-</div>
+<h1 class="page-header"><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Checkout{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
