--- a/src/Club/UserBundle/Resources/views/AdminGroup/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header"><h1>{% trans with {'%group%':group.groupName} %}Group, %group%{% endtrans %}</h1></div>
+<h1 class="page-header">{% trans with {'%group%':group.groupName} %}Group, %group%{% endtrans %}</h1>
 {% endblock %}
 
 {% block pagenav %}
