--- a/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block header %}
-<div class="page-header"><h1>{% trans with {'%group%':group.groupName} %}Group, %group%{% endtrans %}</h1></div>
+<h1 class="page-header">{% trans with {'%group%':group.groupName} %}Group, %group%{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
