--- a/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
@@ -1,9 +1,7 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header">
-    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/user.png') }}" /> {{ user.name }}</h1>
-</div>
+<h1 class="page-header"><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/user.png') }}" /> {{ user.name }}</h1>
 {% endblock %}
 
 {% block pagenav %}
