--- a/src/Club/WelcomeBundle/Resources/views/Blog/new.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/new.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
 {% block header %}
-<div class="page-header"><h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" /> {% trans %}Blog{% endtrans %}</h1></div>
+<h1 class="page-header"><img src="{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" /> {% trans %}Blog{% endtrans %}</h1>
 {% endblock %}
 
 {% block body %}
