--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -15,7 +15,7 @@
 {% endif %}
 
 {% if enable_blog %}
-<div class="page-header"><h1>{% trans %}Blog{% endtrans %}</h1></div>
+<h1 class="page-header">{% trans %}Blog{% endtrans %}</h1>
 
 {% for post in posts %}
 {% include "ClubWelcomeBundle:Welcome:blog.html.twig" %}
